# internal/adapters/http_server/handlers/moneda_handler.go
@@ -20,14 +20,14 @@ func CrearHandlerMoneda(srv ports.ServicioMonedas) *MonedaHandler {
 	}
 }
 
-//	@Summary		Busca todas las monedas
-//	@Description	Obtiene una lista de todos las monedas disponibles.
-//	@Tags			Moneda
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{object}	[]ports.MonedaOutputDTO
-//	@Router			/monedas [get]
-func (mh MonedaHandler) BuscarTodos(c *gin.Context) {
+// @Summary		Busca todas las monedas
+// @Description	Obtiene una lista de todos las monedas disponibles.
+// @Tags			Moneda
+// @Accept			json
+// @Produce		json
+// @Success		200	{object}	[]ports.MonedaOutputDTO
+// @Router			/monedas [get]
+func (mh MonedaHandler) BuscarMonedas(c *gin.Context) {
 	todos, err := mh.srv.BuscarTodos()
 	if err != nil {
 		c.JSON(http.StatusConflict, err)
@@ -37,17 +37,17 @@ func (mh MonedaHandler) BuscarTodos(c *gin.Context) {
 	c.JSON(http.StatusOK, todos)
 }
 
-//	@Summary		Da de alta una moneda
-//	@Description	Si tenemos las credenciales podemos dar de alta una moneda
-//	@Tags			Moneda
-//	@Accept			json
-//	@Produce		json
-//	@Param			Authorization	header		string	true	"Token de autorización"
-//	@Param			simbolo			query		string	true	"Simbolo de la moneda"
-//	@Param			nombre			query		string	false	"Nombre de la moneda nueva"
-//	@Success		200				{object}	int
-//	@Failure		400				{object}	error
-//	@Router			/monedas [post]
+// @Summary		Da de alta una moneda
+// @Description	Si tenemos las credenciales podemos dar de alta una moneda
+// @Tags			Moneda
+// @Accept			json
+// @Produce		json
+// @Param			Authorization	header		string	true	"Token de autorización"
+// @Param			simbolo			query		string	true	"Simbolo de la moneda"
+// @Param			nombre			query		string	false	"Nombre de la moneda nueva"
+// @Success		200				{object}	int
+// @Failure		400				{object}	error
+// @Router			/monedas [post]
 func (mh MonedaHandler) AltaMoneda(c *gin.Context) {
 	nombre := c.Query("nombre")
 	simbolo := c.Query("simbolo")
@@ -63,30 +63,29 @@ func (mh MonedaHandler) AltaMoneda(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"id": id})
 }
 
-//	@Summary	Retorna las cotizaciones paginadas segun los filtros
-//	@Tags		Moneda
-//	@Accept		json
-//	@Produce	json
-//	@Param		monedas			query		string	false	"id de las monedas que queremos separados por espacios"
-//	@Param		fecha_inicial	query		string	false	"Fecha desde la cual quiero obtener cotizaciones (YYYY-MM-DD HH:MM:SS)"	Format(date-time)
-//	@Param		fecha_final		query		string	false	"Fecha hasta la cual quiero obtener cotizaciones (YYYY-MM-DD HH:MM:SS)"	Format(date-time)
-//	@Param		tam_paginas		query		string	false	"El tamaño de las paginas, como maximo es 100, el default es 50"
-//	@Param		pagina_inicial	query		int		false	"Pagina a partir de la cual sera retornado el query"
-//	@Param		cant_paginas	query		int		false	"La cantidad de paginas, como maximo es 10, el default es 1"
-//	@Param		orden			query		string	false	"Ordenar segun alguno de estos valores: fecha(default), valor, nombre"	Enum(fecha, valor, nombre)
-//	@Param		orden_direccion	query		string	false	"Indica si es ascendente o descendente, el default es desdencente"		Enum(ascendente, descendente)
-//	@Param		usuario			query		int		false	"Usuario elegido"
-//	@Param		resumen			query		string	false	"Para incluir resumen indicar el valor debe ser si"	Enum(si, no)
-//	@Success	200				{object}	[]Pagina
-//	@Failure	400				{object}	string
-//	@Router		/cotizaciones [get]
+// @Summary	Retorna las cotizaciones paginadas segun los filtros
+// @Tags		Moneda
+// @Accept		json
+// @Produce	json
+// @Param		monedas			query		string	false	"id de las monedas que queremos separados por espacios"
+// @Param		fecha_inicial	query		string	false	"Fecha desde la cual quiero obtener cotizaciones (YYYY-MM-DD HH:MM:SS)"	Format(date-time)
+// @Param		fecha_final		query		string	false	"Fecha hasta la cual quiero obtener cotizaciones (YYYY-MM-DD HH:MM:SS)"	Format(date-time)
+// @Param		tam_paginas		query		string	false	"El tamaño de las paginas, como maximo es 100, el default es 50"
+// @Param		pagina_inicial	query		int		false	"Pagina a partir de la cual sera retornado el query"
+// @Param		cant_paginas	query		int		false	"La cantidad de paginas, como maximo es 10, el default es 1"
+// @Param		orden			query		string	false	"Ordenar segun alguno de estos valores: fecha(default), valor, nombre"	Enum(fecha, valor, nombre)
+// @Param		orden_direccion	query		string	false	"Indica si es ascendente o descendente, el default es desdencente"		Enum(ascendente, descendente)
+// @Param		usuario			query		int		false	"Usuario elegido"
+// @Param		resumen			query		string	false	"Para incluir resumen indicar el valor debe ser si"	Enum(si, no)
+// @Success	200				{object}	[]Pagina
+// @Failure	400				{object}	string
+// @Router		/cotizaciones [get]
 func (mh MonedaHandler) Cotizaciones(c *gin.Context) {
 
 	// esto nos devuelve un map de todos los query params
 	// filtros := c.Request.URL.Query()
 
 	parametrosBusqueda, err := validarParametros(c)
-	fmt.Println(parametrosBusqueda)
 	resumen := c.Query("resumen") == "si"
 
 	if err != nil {
@@ -112,15 +111,15 @@ func (mh MonedaHandler) Cotizaciones(c *gin.Context) {
 	c.JSON(http.StatusOK, body)
 }
 
-//	@Summary	Llama para que se haga la cotizacion de las monedas
-//	@Tags		Moneda
-//	@Accept		json
-//	@Produce	json
-//	@Param		Authorization	header		string	true	"Token de autorización"
-//	@Param		api				query		string	true	"API que se utilizara para cotizar"
-//	@Success	200				{object}	[]Pagina
-//	@Failure	400				{object}	string
-//	@Router		/cotizaciones [post]
+// @Summary	Llama para que se haga la cotizacion de las monedas
+// @Tags		Moneda
+// @Accept		json
+// @Produce	json
+// @Param		Authorization	header		string	true	"Token de autorización"
+// @Param		api				query		string	true	"API que se utilizara para cotizar"
+// @Success	200				{object}	[]Pagina
+// @Failure	400				{object}	string
+// @Router		/cotizaciones [post]
 func (mh MonedaHandler) AltaCotizaciones(c *gin.Context) {
 
 	api := c.Query("api")
@@ -148,56 +147,28 @@ func ApiValida(nombre string) bool {
 	return nombre == "Paprika" || nombre == "CoinBase"
 }
 
-//	@Summary	Crear un usuario
-//	@Tags		Moneda
-//	@Accept		json
-//	@Produce	json
-//	@Param		nombre	query		string	true	"nombre del nuevo usuario"
-//	@Success	200		{object}	string
-//	@Failure	400		{object}	string
-//	@Router		/usuario [post]
-func (mh MonedaHandler) AltaUsuario(c *gin.Context) {
-	nombre := c.Query("nombre")
-	if nombre == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Debe proporcionar un nombre de usuario"})
+// @Summary	Listar las monedas preferidas de un usuario
+// @Tags		Moneda
+// @Accept		json
+// @Produce	json
+// @Param		id	path		int	true	"id del usuario"
+// @Success	200	{object}	[]ports.MonedaOutputDTO
+// @Failure	400	{object}	string
+// @Router		/usuarios/{id}/monedas [get]
+func (mh MonedaHandler) MonedasDeUsuario(c *gin.Context) {
+
+	var id int
+	var err error
+	if id, err = strconv.Atoi(c.Param("id")); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Errorf("el id debe ser un entero")})
 		return
 	}
 
-	id, err := mh.srv.AltaUsuario(nombre)
+	monedas, err := mh.srv.MonedasDeUsuario(id)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusConflict, gin.H{"error": err})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"id": id})
-}
-
-//	@Summary	Da de baja a un usuario
-//	@Tags		Moneda
-//	@Accept		json
-//	@Produce	json
-//	@Param		id	query		int	true	"id del usuario que se desea dar de baja"
-//	@Success	200	{object}	string
-//	@Failure	400	{object}	string
-//	@Router		/usuario [delete]
-func (mh MonedaHandler) BajaUsuario(c *gin.Context) {
-
-	idString := c.Query("id")
-	if idString == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Debe proporcionar un nombre de usuario"})
-		return
-	}
-
-	id, err := strconv.Atoi(idString)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "el id debe ser un numero"})
-	}
-
-	err = mh.srv.BajaUsuario(id)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	c.JSON(http.StatusOK, "El usuario se elimino correctamente")
+	c.JSON(http.StatusOK, monedas)
 }
